Edits fixing some styling and making a URL *not* a footnote so its inability to break the line won't get things weird on small mobile devices.

--- a/themes/ofotigrid/assets/scss/ofotigrid/_base.scss
+++ b/themes/ofotigrid/assets/scss/ofotigrid/_base.scss
@@ -5,7 +5,7 @@ body {
   letter-spacing: -0.01em; // old browsers
   letter-spacing: -0.015rem;
   width: 100%;
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
   text-rendering: optimizeLegibility;
 }
@@ -185,4 +185,8 @@ a.footnote-return{
     width: 100%;
     height: 100%;
   }
+}
+
+pre, code {
+  white-space: inherit; // otherwise, code causes horizontal overflow
 }
